add jigsaw module